# hitl-ml

./: .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  NOTICE.md  PROJECT_STATE.md  README.md  SECURITY.md  fix_translations.py  requirements.txt
editions/spring/backend-rust/: Cargo.toml  Dockerfile  openapi.yaml
editions/spring/backend-rust/.sqlx/: query-0b2b0e42826ef6f264214350d76bf51e02c9f10fc02e2b71d0dda082109304ab.json  query-0edb8194c4e0e2afbc6e5f87fbb9165311681ae45dd06157d81686e10c6a5af2.json  query-13e76e0cdccdee9e3f0200fff696a0f98fbd03bbcecc01f3e7da790c425a5a32.json  query-1455a7dbc2b75a59a8ecb99c14e8c06ad3a16491bf1590b31e36aef493416ade.json  query-153f9f0793ecf4231688ca92b9a892132d7091cd2ccb877ae30b15b0595da313.json  query-1e71da068693269805ac365da0195f1ada68f16cb1f49deb7ca092a618b92cf8.json  query-25fa9f08ea1f092876acf96c8ec85f239d9ea1d2bc9aa5ad0b4e325cc4cf6a4e.json  query-274e2ec6f3b00d65a6087e3c7f55859397b08983d2b522c6be632738fec0052c.json  query-27c5361b8b4f4235297db4c604efceb379873d8ff3c42d198249eb9a8de7cfb9.json  query-29ac0f1464bd740adb72135e8d968ffe0c9c3a175600c7aec8f00516aae3895d.json  query-2e8065e79ac86aee8cd8d9d0c6682adbc7aed56ce1f53b1c4ed7b88d43596722.json  query-35400269dc65fc3c949e58b22977d84be559c971f9e436ce05f3f6a55dc77988.json  query-3554755c3540cd13435679c45e26df7eea4bb41b0ef5b429d32b4e4bd906ea43.json  query-390add5fc0faac77f5fc4e14d7e62d15ff5dffeda07b5402b8dff97c86c68d37.json  query-3a4a2e5c5415155b8a208304e1582c11cbb867810d94a28ad81c50486cd6913e.json  query-44e10e3a240ed3e0aa204c844ced9fed8819167323badecae6aac0582d8d643c.json  query-46084c2f744c3c6db601ebeba879df7a0e9a9fc68a24ced116e50dae87fe91d2.json  query-464bf6e0796e7a14ee70dba414d4e3821388bc80ee3f41d80725677071f6d573.json  (+27 more)
(+763 files in other folders)
